2000-06-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* OPERATORS/op-bm-bm.cc (eq): Define using mx_el_eq, not operator ==.
	(ne): Likewise, use mx_el_ne, not operator !=.

	* pr-output.cc (Fdisp): Delete.

2000-06-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pr-output.cc (float_format::float_format): Set default values
	for width and precision to -1.
	(operator << (ostream&, pr_formatted_float&): Set width and
	precision if values are >= 0.
	(set_real_format, set_real_matrix_format, set_range_format,
	set_complex_format, set_complex_matrix_format): If we have all
	integers, infinities, or nans, set precision equal to field width.

	* load-save.cc (read_ascii_data): Allow empty strings and string
	vectors to be restored.

	* variables.cc (var_matches_any_pattern): New function.
	(Fclear): Use it to make exclusive clear work correctly.

2000-06-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-range.h (octave_range::is_numeric_type): New function.

	* sysdep.cc (Fkbhit): Also ask for input if forced_interactive.

2000-06-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (oct-gperf.h): Use $(GPERF) instead of gperf.

2000-05-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/qz.cc (Fqz): When computing finite generalized
	eigenvalues, don't write past the end of the array.

2000-05-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-base-nd-array.h, ov-base-nd-array.cc, ov-re-nd-array.h,
	ov-re-nd-array.h: New files.
	* Makefile.in: Add them to the appropriate lists.

	* pt-stmt.h, pt-stmt.cc (class tree_statement):
	Store comments associated with this parse tree element.
	* pt-select.h, pt-select.cc (class tree_if_clause,
	class tree_if_command, class tree_switch_case
	class tree_switch_command): Likewise.
	* pt-loop.h, pt-loop.cc (class tree_while_command,
	class tree_do_until_command, class tree_simple_for_command,
	class tree_complex_for_command): Likewise.
	* pt-except.h, pt-except.cc (class tree_try_catch_command,